--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,25 +11,59 @@ on:
     
 
 jobs:
-  test:
-    
   build:
-
     runs-on: ubuntu-latest
     needs: 
       - test
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        node-version: 14
+    - working-directory: ./start/client
+      run: npm run build --if-present
+    - name: upload a build artifact
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        path: ./start/client/build
+        retention-days: 1
+  test:
+    runs-on: ubuntu-latest
+    needs: 
+      - build
+    steps:
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14
+      - name: Download build artifact
+        uses: actions/download-artifact@v2.0.8
+      - run: npm install -g @lhci/cli@0.7.x
+      - run: lhci autorun
+  deploy:
+    needs:
+      - test
+    steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v2.0.8
+      - name: SCP files
+        uses: appleboy/scp-action@v0.0.1
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          source: "./**"
+          target: "test"
+      - name: ssh deploy
+        # You may pin to the exact commit or the version.
+        # uses: easingthemes/ssh-deploy@191986574c0735ffad7ae1a297a414d6e6f95375
+        - name: executing remote ssh commands using password
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+            script: echo "hi"
+    
+  
