--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
     needs: 
       - build
     steps:
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
         node-version: 14
     - name: Download build artifact
