--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,6 +40,7 @@ jobs:
     - run: npm install -g @lhci/cli@0.7.x
     - run: lhci autorun
   deploy:
+    runs-on: ubuntu-latest
     needs:
       - test
     steps:
